--- a/frontend/themes/jorgo/css/style.css
+++ b/frontend/themes/jorgo/css/style.css
@@ -218,12 +218,14 @@ section.main-page{
   width: 270px;
 }
 .link{
-  float: left;
+  /*float: left;*/
   margin-left: 6px;
+  text-align: center;
 }
 .link-text{
-  float: right;
-  width: 55%;
+ /* float: right;*/
+  width: 100%;
+  text-align: center;
   font-size: 14px;
   line-height: 1.9;
   font-family: 'Roboto', sans-serif;
